app/assets/stylesheets/white_theme/cover_view.scss
// .playlist-options is for the cover view, which isn't technically the post
// ok!

.track-content {
  &.track-content-cover-view {
     margin-left: -$baseline!important;
  }
  min-width: 400px;
  @media #{$mobile} {
    min-width: none;
  }
  .large-cover {
    width: 100%;
    max-width: 800px;
    height: auto;
    svg {
      display: block;
      border-radius: 0 4px 4px 0;
    }
    img {
      display: block;
      border-radius: 0 4px 4px 0;
    }
  }
  img {
    max-width: 100%;
    display: block;
  }
  .playlist-credits {
    font-size: 13px;
    line-height: 18px;
    width: 100%;
    padding: $baseline/2;
    box-sizing: border-box;
    color: $black;
    background-color: #FFF;

  }
  .playlist-options {
    width: 100%;
    height: 50px;
    background-color: $not-quite-black;
    font-family: $sans-font;
    ul {
      &.downloads-links {
        float: left;
        margin-top: 0;
        margin-bottom: 0;
      }
      &.external-links {
        float: right;
        margin-top: 0;
        margin-bottom: 0;
        li {
          border-right: 0;
          border-left: 1px solid #000000;
        }
      }
      li {
        display: block;
        float: left;
        height: 50px;
        border-right: 1px solid #000000;
        background-color: $not-quite-black;
        &:hover {
          background-color: #000000;
        }
        a {
          font-size: 12px;
          font-weight: 300;
          display: block;
          width: auto;
          margin-top: 0;
          margin-right: 5px;
          margin-bottom: 0;
          padding: 5px $baseline / 2;
          padding-top: 8px;
          padding-bottom: 0;
          text-decoration: none;
          color: $not-quite-white-opaque;;
          i {
            margin-right: 10px;
          }
          .action-text {
            font-size: 10px;
            display: block;
            margin-left: 21px;
            color: $gray;
            margin-top: 4px;
          }
        }
      }
    }
  }
}

